syntax = "proto3";

package example;

option go_package = "./pb;pb"; // Update this path

import "google/protobuf/timestamp.proto";

service LocationsService {
  rpc GetLocations (LocationsRequest) returns (LocationsList) {}
}

message LocationsRequest {
  google.protobuf.Timestamp created_at = 1;
}

message Location {
  int32 id = 1;
  int32 personId = 2;
  string coordinate = 3;
}

message LocationsList {
  repeated Location locations = 1; // This defines an array of MyMessage
}